# AdventOfCode

./: .gitignore  .gitmodules  aoc.cabal  aoc.hs  aoc.prof
2023/Haskell/app/: AoC.hs  Util.hs
2023/Haskell/app/Day1/: Trebuchet.hs
2023/Haskell/app/Day10/: PipeMaze.hs
2023/Haskell/app/Day12/: HotSprings.hs
2023/Haskell/app/Day13/: PointOfIncidence.hs
2023/Haskell/app/Day15/: LensLibrary.hs
2023/Haskell/app/Day17/: ClumsyCrucible.hs
2023/Haskell/app/Day2/: CubeConundrum.hs
2023/Haskell/app/Day20/: PulsePropagation.hs
2023/Haskell/app/Day21/: StepCounter.hs
2023/Haskell/app/Day4/: Scratchcards.hs
2023/Haskell/app/Day8/: HauntedWasteland.hs
2023/Haskell/app/Day9/: MirageMaintenance.hs
2023/Scala/src/main/scala/day3/: Day2.scala
2024/Haskell/: aoc.cabal
2024/Haskell/app/: AoC.hs  Util.hs
2024/Haskell/app/Day1/: HistorianHysteria.hs
2024/Haskell/app/Day10/: HoofIt.hs
2024/Haskell/app/Day11/: PlutonianPebbles.hs
2024/Haskell/app/Day12/: GardenGroups.hs
2024/Haskell/app/Day13/: ClawContraption.hs
2024/Haskell/app/Day14/: RestroomRedoubt.hs
2024/Haskell/app/Day15/: WarehouseWoes.hs
2024/Haskell/app/Day16/: ReindeerMaze.hs
2024/Haskell/app/Day17/: ChronospatialComputer.hs
2024/Haskell/app/Day18/: RamRun.hs
2024/Haskell/app/Day19/: LinenLayout.hs
2024/Haskell/app/Day2/: RedNosedReports.hs
2024/Haskell/app/Day20/: RaceCondition.hs
2024/Haskell/app/Day21/: KeypadConundrum.hs
2024/Haskell/app/Day22/: MonkeyMarket.hs
2024/Haskell/app/Day23/: LanParty.hs
2024/Haskell/app/Day24/: CrossedWires.hs
2024/Haskell/app/Day25/: CodeChronicle.hs
2024/Haskell/app/Day3/: MullItOver.hs
2024/Haskell/app/Day4/: CeresSearch.hs
2024/Haskell/app/Day5/: PrintQueue.hs
2024/Haskell/app/Day6/: GuardGallivant.hs
2024/Haskell/app/Day7/: BridgeRepair.hs
2024/Haskell/app/Day8/: ResonantCollinearity.hs
2024/Haskell/app/Day9/: DiskFragmenter.hs
2025/Granule/: Day1.gr  Std  Util.gr  flake.nix
2025/Haskell/: .gitignore  aoc.cabal
2025/Haskell/app/: AoC.hs  Util.hs
2025/Haskell/app/Day1/: SecretEntrance.hs
2025/Haskell/app/Day10/: Factory.hs
2025/Haskell/app/Day11/: Reactor.hs
2025/Haskell/app/Day12/: ChristmasTreeFarm.hs
2025/Haskell/app/Day2/: GiftShop.hs
2025/Haskell/app/Day3/: Lobby.hs
2025/Haskell/app/Day4/: PrintingDepartment.hs
2025/Haskell/app/Day5/: Cafeteria.hs
2025/Haskell/app/Day6/: TrashCompactor.hs
2025/Haskell/app/Day7/: Laboratories.hs
2025/Haskell/app/Day8/: Playground.hs
2025/Haskell/app/Day9/: MovieTheater.hs
app/: AoC.hs  Util.hs
app/Day10/: PipeMaze.hs
app/Day11/: CosmicExpansion.hs
app/Day12/: HotSprings.hs
app/Day13/: PointOfIncidence.hs
app/Day14/: ParabolicReflectorDish.hs
app/Day15/: LensLibrary.hs
app/Day16/: TheFloorWillBeLava.hs
app/Day18/: LavaductLagoon.hs
app/Day19/: Aplenty.hs
app/Day2/: CubeConundrum.hs
app/Day21/: StepCounter.hs
app/Day3/: GearRatios.hs
app/Day4/: Scratchcards.hs
app/Day5/: Fertilizer.hs
app/Day6/: WaitForIt.hs
app/Day7/: CamelCards.hs
app/Day8/: HauntedWasteland.hs
