cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mr-Pine
maintainer:         git@mr-pine.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc
    main-is:          AoC.hs

    -- Modules included in this executable, other than Main.
    other-modules: Util
                 , Day1.Trebuchet
                 , Day2.CubeConundrum
                 , Day3.GearRatios
                 , Day4.Scratchcards
                 , Day5.Fertilizer
                 , Day6.WaitForIt
                 , Day7.CamelCards
                 , Day8.HauntedWasteland
                 , Day9.MirageMaintenance
                 , Day10.PipeMaze
                 , Day11.CosmicExpansion
                 , Day12.HotSprings

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: NamedFieldPuns
                    , OverloadedRecordDot
                    , RecordWildCards
                    
    build-depends:    base ^>=4.17.2.0
                    , megaparsec == 9.6.1
                    , text
                    , parallel
                    , ghc
                    , pretty-simple
                    , containers
                    , chimera
                    , cantor-pairing
                    , array
    hs-source-dirs:   app
    default-language: Haskell2010
